syntax = "proto3";

option csharp_namespace = "Server.Services";

package crud;

service Crud{
	rpc CreateItem (CreateRequest) returns (CreateResponse);
	rpc GetById (GetItemByIdRequest) returns (GetItemResponse);
}

message CreateRequest{
	string Name = 1;
}

message CreateResponse{
	int32 Id = 1;
}

message GetItemByIdRequest{
	int32 Id = 1;
}

message GetItemResponse {
	int32 Id = 1;
	string Name = 2;
}